--- a/main.html
+++ b/main.html
@@ -11,6 +11,10 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<div>
+		<a href="">My current favourite song is gerua</a>
+	</div>
+
 </body>
 
 </html>
