--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 </script>
 
 	<div>
-		<a href="">My current favourite song is gerua</a>
+		<a href="https://www.youtube.com/watch?v=AEIVhBS6baE">My current favourite song is gerua</a>
 	</div>
 
 </body>
